# End-to-End-RAG-Project-using-AWS-Bedrock

./: README.md
bedrock/: README.md  main.py  pyproject.toml
bedrock/research/: Readme.txt  bedrock_trials.py
